Fixed hero alignment

--- a/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
+++ b/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
@@ -403,7 +403,7 @@ body {
     }
     .jumbotron {
         position: relative;
-        text-align: center;
+        text-align: left;
         height: 100%;
         padding: 0;
         margin-top: 0px;
